# flviewer

./: AUTHORS  ChangeLog  HACKING  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h.in  configure  configure.ac  flviewer.spec
doc/: Makefile.am  Makefile.in  flviewer.md  flviewer.md.in
include/: MultipageImage.h  Plugin.h
plugins/: Makefile.am  Makefile.in
plugins/libtiff/: Makefile.am  Makefile.in  TiffImage.cpp  TiffImage.h
plugins/mupdf/: Makefile.am  Makefile.in  build.sh  i18n.h  mupdf.cpp  mupdf.h  mupdf.map
plugins/mupdf/po/: Makefile.in  POTFILES  en.po  fvp_mupdf.pot  ru.po
plugins/poppler_pdf/: Makefile.am  Makefile.in  PdfImage.cpp  PdfImage.h
plugins/poppler_pdf/po/: Makefile.in  POTFILES  en.po  fvp_poppler_pdf.pot  ru.po
po/: LINGUAS  Makefile.in  Makefile.in.in  Makevars  POTFILES.in  en@boldquot.po  en@quot.po  flviewer.pot  ru.po
share/: Makefile.am  Makefile.in  flviewer.desktop.in.in
share/icons/: flviewer.xpm  load.xbm  load.xpm  next.xpm  prev.xpm  zoom_fit.xpm  zoom_in.xpm  zoom_out.xpm
src/: DirImage.cpp  DirImage.h  MainWindow.cpp  MainWindow.h  Makefile.am  Makefile.in  Plugin.cpp  flviewer-plugin.pc.in  i18n.h  main.cpp
